aria2: disable sqlite since there is no dependency on it (#17621), correct gnutls configure arg
git-svn-id: https://svn.macports.org/repository/macports/trunk@72455 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/aria2/Portfile
+++ b/dports/net/aria2/Portfile
@@ -21,10 +21,11 @@ use_bzip2		yes
 depends_lib		port:gettext port:libiconv port:gnutls port:libxml2
 
 configure.cxxflags-append	"-I${prefix}/include/libxml2"
-configure.args	--with-gnutls --with-gnutls-prefix=${prefix} \
+configure.args	--with-gnutls --with-libgnutls-prefix=${prefix} \
 				--with-libiconv-prefix=${prefix} \
 				--with-libintl-prefix=${prefix} \
-				--with-xml-prefix=${prefix}
+				--with-xml-prefix=${prefix} \
+				--without-sqlite3
 
 post-destroot { file delete -force "${destroot}${prefix}/lib/charset.alias" }
 
