move llvm-config to pre-configure
git-svn-id: https://svn.macports.org/repository/macports/trunk@72457 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ld64/Portfile
+++ b/dports/devel/ld64/Portfile
@@ -10,7 +10,7 @@ maintainers             mfeiri
 homepage                http://opensource.apple.com/source/ld64/
 master_sites            http://opensource.apple.com/tarballs/ld64/
 license                 Apple Public Source License (APSL), version 2.0
-depends_build           path:include/llvm-c/lto.h:llvm
+depends_build           port:llvm
 universal_variant       no
 description             ld64 is the new mach-o linker
 long_description        ld64 combines several object files and libraries, \
@@ -36,8 +36,11 @@ platform darwin 9 {
     patchfiles          patch-MATH85-ld.cpp.diff
     xcode.target        all ObjectDump machocheck
     xcode.destroot.path ${prefix}/bin
-    build.env           OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-    destroot.env        OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+
+    pre-configure {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    }
 
     post-patch {
         reinplace "s|/usr/share/man/man1|${prefix}/share/man/man1|g" \
@@ -76,8 +79,11 @@ platform darwin 10 {
     xcode.destroot.path ${prefix}/bin
     xcode.build.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
     xcode.destroot.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
-    build.env           OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-    destroot.env        OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+
+    pre-configure {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    }
 
     post-extract {
         system "cd ${workpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} ${svn.url}@${svn.revision}"
