--- a/dports/databases/postgresql80/Portfile
+++ b/dports/databases/postgresql80/Portfile
@@ -3,8 +3,8 @@
 PortSystem 1.0
 
 name			postgresql80
-version			8.0.25
-revision        1
+version			8.0.26
+
 categories		databases
 platforms		darwin
 maintainers		mww jwa
@@ -20,9 +20,9 @@ master_sites		http://ftp.de.postgresql.org/mirror/postgresql//source/v${version}
 			postgresql:source/v${version}
 distname		postgresql-${version}
 
-checksums           md5     91b6f5c27d881e2fef8e9dd7aae1bbe7 \
-                    sha1    d21bc9e13c1639ad46c1463f5ba1279ac5e011c0 \
-                    rmd160  a0c783034925ec454163991bfea688c728061d88
+checksums           md5     6ea1097fd4a57102ec023bc5cca7a35e \
+                    sha1    27e0bd4661bc5f2b0f589f721cfbd4eddbb3b4cc \
+                    rmd160  e75c19fa0059929c89a18403a546c145698b2fe8
 
 use_bzip2		yes
 
@@ -94,6 +94,7 @@ variant perl description {add Perl support} {
 }
 
 post-install {
-	ui_msg "\nTo use the postgresql server, install the postgresql80-server port"
+    ui_msg "\nTo use the postgresql server, install the postgresql80-server port"
+    ui_msg "\nNB! This is the last version os PostgreSQL 8.0, consider upgrading!\n"
 }
 
