postgresql80: fix typo in message
git-svn-id: https://svn.macports.org/repository/macports/trunk@72462 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/postgresql80/Portfile
+++ b/dports/databases/postgresql80/Portfile
@@ -95,6 +95,6 @@ variant perl description {add Perl support} {
 
 post-install {
     ui_msg "\nTo use the postgresql server, install the postgresql80-server port"
-    ui_msg "\nNB! This is the last version os PostgreSQL 8.0, consider upgrading!\n"
+    ui_msg "\nNB! This is the last version of PostgreSQL 8.0; consider upgrading!\n"
 }
 
