winetricks: depend on zenity instead of xmessage (winetricks already checks for and uses zenity if found in preference to xmessage)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72463 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/winetricks/Portfile
+++ b/dports/x11/winetricks/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 
 name                    winetricks
 version                 20101008
+revision                1
 categories              x11
 maintainers             ryandesign
 homepage                http://code.google.com/p/winezeug/
@@ -29,7 +30,7 @@ long_description        ${name} can help you prepare your system for Windows \
 checksums               sha1    4392d8af5bf0cedc0baf172a31feae65f9fd06de \
                         rmd160  22146323c1d8be5c44dd10e20e6dc0168ce7aa6a
 
-depends_run             path:bin/xmessage:xmessage \
+depends_run             path:bin/zenity:zenity \
                         path:bin/wine:wine \
                         path:bin/cabextract:cabextract \
                         path:bin/openssl:openssl \
