attica: update to 0.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72464 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/attica/Portfile
+++ b/dports/kde/attica/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           kde4   1.0
 
 name                attica
-version             0.1.4
+version             0.2.0
 categories          kde kde4
 maintainers         snc sharky
 description         Qt library for Open Collaboration Services API 1.4
@@ -15,9 +15,8 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${name}
 use_bzip2           yes
 worksrcdir          ${name}-${version}
-checksums           md5     04887f3d10f6394cafc0d77c0ae60ec2 \
-                    sha1    b93aee339b5f61442e04c920acb981b4dca719ea \
-                    rmd160  2fbacf1bc4a4e75edb8c1be6b23881d5d5f8144a
+checksums           md5     df3dcea0229cfa31539bdd427976e15b \
+                    sha1    724c6e9aab662280ec5b6570b23cf1cfc6c28cc7
 
 platform darwin 8 {
     configure.ldflags-append    -lz -lssl -lcrypto
