xrg: update to 1.6.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72468 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/xrg/Portfile
+++ b/dports/aqua/xrg/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 PortGroup       xcode 1.0
 
 name            xrg
-version         1.5.2
+version         1.6.0
 categories-append   sysutils
 maintainers     snc openmaintainer
 description     XRG is an open source system monitor for Mac OS X.
@@ -22,7 +22,10 @@ long_description \
 homepage        http://www.gauchosoft.com
 master_sites    http://download.gauchosoft.com/${name}/
 distname        [string toupper ${name}]-src-${version}
-checksums       md5 c54e45eddb571d8e14271edd54f71f20
+checksums           sha1    87c53490fb9b52ff404eab5641a92ff732897a2f \
+                    rmd160  095c2bef9948e8d5bfac37b55d6ddc4456dfacf4
+
+worksrcdir          [string toupper ${name}]
 
 livecheck.url       ${homepage}/Software/X%20Resource%20Graph/Download/
 livecheck.regex     [string toupper ${name}]-src-(\\d+\\.\\d+\\.\\d+)${extract.suffix}
