pspp-devel: update to gc8e5d5
git-svn-id: https://svn.macports.org/repository/macports/trunk@72470 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101010040502
-set buildhash       gedfe2d
+set buildstamp      20101016040502
+set buildhash       gc8e5d5
 version             0.7.5
-revision            16
+revision            17
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    6380d7a7cb0739ba7bf2d09d40950f1a056c056c \
-                    rmd160  7a616e6278f3022c04ff144867a51d1940dbee09
+checksums           sha1    7be3736d82c5df017a95dc56d4283ad12765e506 \
+                    rmd160  a79501dd69253122b9132f3185ebf58b6a2c6e51
 
 #configure.optflags  -O0
 #configure.cflags-append -g
