--- a/dports/graphics/lcms/Portfile
+++ b/dports/graphics/lcms/Portfile
@@ -11,7 +11,6 @@ categories              graphics
 platforms               darwin
 maintainers             nomaintainer
 license                 MIT
-use_parallel_build      yes
 
 description             Little Color Management System, a color matching \
                         method library
@@ -24,20 +23,17 @@ long_description        LCMS is the Little Color Management System, a portable \
 
 homepage                http://www.littlecms.com/
 
-master_sites            sourceforge:lcms \
-                        ${homepage}
+master_sites            sourceforge:lcms
 
-checksums           md5     8af94611baf20d9646c7c2c285859818 \
-                    sha1    d5b075ccffc0068015f74f78e4bc39138bcfe2d4 \
-                    rmd160  530615c061dccdcb64d75c6fab148dd565bb6c91
+checksums               md5     8af94611baf20d9646c7c2c285859818 \
+                        sha1    d5b075ccffc0068015f74f78e4bc39138bcfe2d4 \
+                        rmd160  530615c061dccdcb64d75c6fab148dd565bb6c91
 
-depends_lib             port:jpeg \
-                        port:tiff \
-                        port:zlib
+depends_lib             port:tiff
 
 test.run                yes
 test.target             check
 
-livecheck.type  regex
-livecheck.url   http://www.littlecms.com/downloads.htm
-livecheck.regex "Current version is (.*)<"
+livecheck.type           regex
+livecheck.url            http://sourceforge.net/projects/lcms/files/
+livecheck.regex          "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
