antlr: fix destdir issues (#17629), respect build_arch (#24346)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72473 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/antlr/Portfile
+++ b/dports/lang/antlr/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name			antlr
 version			2.7.7
+revision		1
 categories		lang java
 platforms		darwin
 maintainers		landonf openmaintainer
@@ -21,21 +22,15 @@ master_sites		${homepage}download/ \
 checksums		md5    01cc9a2a454dd33dcd8c856ec89af090         \
             sha1   802655c343cc7806aaf1ec2177a0e663ff209de1 \
             rmd160 0b7951a28b748e912721fe0f6de4095d9f8da57d
-patchfiles		patch-configure.diff
+patchfiles		patch-configure.diff antlr-DESTDIR.patch
 
 configure.env		CLASSPATH=.
-configure.pre_args	--prefix=${destroot}${prefix}
 configure.args		--disable-csharp
 
 if {[variant_isset universal]} {
      build.args "CXXFLAGS=\"${configure.cxxflags} ${configure.universal_cxxflags}\" LDFLAGS=\"${configure.ldflags} ${configure.universal_ldflags}\""
-}
-
-destroot.args	versioneddir=java
-post-destroot	{
-	reinplace "s|antlr-2.7.3/|java/|g" ${destroot}${prefix}/bin/antlr
-	reinplace "s|^prefix=.*|prefix=\"${prefix}\"|g" \
-		${destroot}${prefix}/bin/antlr
+} else {
+     build.args "CXXFLAGS=\"${configure.cxxflags} ${configure.cxx_archflags}\" LDFLAGS=\"${configure.ldflags} ${configure.ld_archflags}\""
 }
 
 livecheck.type  regex
