--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                mldonkey
-version             3.0.4
+version             3.0.5
 categories          net
 platforms           darwin
 maintainers         nomaintainer
@@ -25,9 +25,8 @@ homepage            http://mldonkey.sourceforge.net/
 master_sites        sourceforge
 use_bzip2           yes
 
-checksums           md5     06a084874dfd99dbad4dabc21e986354 \
-                    sha1    8d9e32acdc4cda1a7ff0f09e06c76cd589691d3f \
-                    rmd160  e98e3319ed6099af0fb226402547e4407114c074
+checksums           sha1    1cd1b1ad9f7b49d7171ab300a38c9539a53901a5 \
+                    rmd160  242e5ff14e592f06f89a4066bb821ad3229ec6b3
 
 depends_lib         port:ocaml \
                     port:lablgtk2 \
@@ -41,8 +40,6 @@ depends_lib         port:ocaml \
                     port:libiconv \
                     port:libpng
 
-patchfiles          patch-gui-guiHtml.diff \
-                    patch-gui-guiOptions.diff
 
 # ocaml is not universal
 universal_variant   no
