--- a/dports/databases/slony1/Portfile
+++ b/dports/databases/slony1/Portfile
@@ -3,7 +3,7 @@
 PortSystem        1.0
 
 name              slony1
-version           2.0.4
+version           2.0.5
 categories        databases
 platforms         darwin
 maintainers       gmail.com:wreese jwa
@@ -14,33 +14,33 @@ homepage          http://main.slony.info/
 master_sites      ${homepage}/downloads/2.0/source
 use_bzip2         yes
 
-checksums           md5     453089999055638a841382963dfcd0f0 \
-                    sha1    878f104b9d7af70fdba180cc05337d73976fa7a1 \
-                    rmd160  5c630957a0fd9093cf18d74b52b39e37ebe36eed
+checksums           md5     4c9922a809011dc8e55c4a8ad1ca5bff \
+                    sha1    cc285c8d5659d2389caef281829f6110fe74a392 \
+                    rmd160  7235658277ab8a7ed0ee722d52f33e766534f18b
 
-depends_lib	  port:postgresql84
+depends_lib	  port:postgresql90
 
-configure.args	  --with-pgconfigdir="${prefix}/lib/postgresql84/bin/" \
-    --with-pgsharedir="${prefix}/share/postgresql84/" \
-    --with-pgbindir="${prefix}/lib/postgresql84/bin/" \
-    --with-pgincludedir="${prefix}/include/postgresql84/" \
-    --with-pgincludeserverdir="${prefix}/include/postgresql84/server/" \
-    --with-pglibdir="${prefix}/lib/postgresql84/" \
-    --with-pgpkglibdir="${prefix}/lib/postgresql84/"
+configure.args	  --with-pgconfigdir="${prefix}/lib/postgresql90/bin/" \
+    --with-pgsharedir="${prefix}/share/postgresql90/" \
+    --with-pgbindir="${prefix}/lib/postgresql90/bin/" \
+    --with-pgincludedir="${prefix}/include/postgresql90/" \
+    --with-pgincludeserverdir="${prefix}/include/postgresql90/server/" \
+    --with-pglibdir="${prefix}/lib/postgresql90/" \
+    --with-pgpkglibdir="${prefix}/lib/postgresql90/"
 
 destroot.args     -B
 
-variant postgresql82 conflicts postgresql83 \
-    description {support for PostgreSQL 8.2 instead of 8.4} {
-    depends_lib-delete	port:postgresql84
+variant postgresql82 conflicts postgresql83 postgresql84 \
+    description {support for PostgreSQL 8.2 instead of 9.0} {
+    depends_lib-delete	port:postgresql90
     depends_lib-append	port:postgresql82
-    configure.args-delete	--with-pgconfigdir="${prefix}/lib/postgresql84/bin/"
-    configure.args-delete	--with-pgsharedir="${prefix}/share/postgresql84/"
-    configure.args-delete	--with-pgbindir="${prefix}/lib/postgresql84/bin/"
-    configure.args-delete	--with-pgincludedir="${prefix}/include/postgresql84/"
-    configure.args-delete	--with-pgincludeserverdir="${prefix}/include/postgresql84/server/"
-    configure.args-delete	--with-pglibdir="${prefix}/lib/postgresql84/"
-    configure.args-delete	--with-pgpkglibdir="${prefix}/lib/postgresql84/"
+    configure.args-delete	--with-pgconfigdir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgsharedir="${prefix}/share/postgresql90/"
+    configure.args-delete	--with-pgbindir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgincludedir="${prefix}/include/postgresql90/"
+    configure.args-delete	--with-pgincludeserverdir="${prefix}/include/postgresql90/server/"
+    configure.args-delete	--with-pglibdir="${prefix}/lib/postgresql90/"
+    configure.args-delete	--with-pgpkglibdir="${prefix}/lib/postgresql90/"
 
     configure.args-append	  --with-pgconfigdir="${prefix}/lib/postgresql82/bin/" \
 	--with-pgsharedir="${prefix}/share/postgresql82/" \
@@ -51,17 +51,17 @@ variant postgresql82 conflicts postgresql83 \
 	--with-pgpkglibdir="${prefix}/lib/postgresql82/"
 }
 
-variant postgresql83 conflicts postgresql82 \
-    description {support for PostgreSQL 8.3 instead of 8.4} {
-    depends_lib-delete	port:postgresql84
+variant postgresql83 conflicts postgresql82 postgresql84 \
+    description {support for PostgreSQL 8.3 instead of 9.0} {
+    depends_lib-delete	port:postgresql90
     depends_lib-append	port:postgresql83
-    configure.args-delete	--with-pgconfigdir="${prefix}/lib/postgresql84/bin/"
-    configure.args-delete	--with-pgsharedir="${prefix}/share/postgresql84/"
-    configure.args-delete	--with-pgbindir="${prefix}/lib/postgresql84/bin/"
-    configure.args-delete	--with-pgincludedir="${prefix}/include/postgresql84/"
-    configure.args-delete	--with-pgincludeserverdir="${prefix}/include/postgresql84/server/"
-    configure.args-delete	--with-pglibdir="${prefix}/lib/postgresql84/"
-    configure.args-delete	--with-pgpkglibdir="${prefix}/lib/postgresql84/"
+    configure.args-delete	--with-pgconfigdir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgsharedir="${prefix}/share/postgresql90/"
+    configure.args-delete	--with-pgbindir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgincludedir="${prefix}/include/postgresql90/"
+    configure.args-delete	--with-pgincludeserverdir="${prefix}/include/postgresql90/server/"
+    configure.args-delete	--with-pglibdir="${prefix}/lib/postgresql90/"
+    configure.args-delete	--with-pgpkglibdir="${prefix}/lib/postgresql90/"
 
     configure.args-append	  --with-pgconfigdir="${prefix}/lib/postgresql83/bin/" \
 	--with-pgsharedir="${prefix}/share/postgresql83/" \
@@ -71,6 +71,28 @@ variant postgresql83 conflicts postgresql82 \
 	--with-pglibdir="${prefix}/lib/postgresql83/" \
 	--with-pgpkglibdir="${prefix}/lib/postgresql83/"
 }
+
+variant postgresql84 conflicts postgresql82 postresql83 \
+    description {support for PostgreSQL 8.4 instead of 9.0} {
+    depends_lib-delete	port:postgresql90
+    depends_lib-append	port:postgresql84
+    configure.args-delete	--with-pgconfigdir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgsharedir="${prefix}/share/postgresql90/"
+    configure.args-delete	--with-pgbindir="${prefix}/lib/postgresql90/bin/"
+    configure.args-delete	--with-pgincludedir="${prefix}/include/postgresql90/"
+    configure.args-delete	--with-pgincludeserverdir="${prefix}/include/postgresql90/server/"
+    configure.args-delete	--with-pglibdir="${prefix}/lib/postgresql90/"
+    configure.args-delete	--with-pgpkglibdir="${prefix}/lib/postgresql90/"
+
+    configure.args-append	  --with-pgconfigdir="${prefix}/lib/postgresql84/bin/" \
+	--with-pgsharedir="${prefix}/share/postgresql84/" \
+	--with-pgbindir="${prefix}/lib/postgresql84/bin/" \
+	--with-pgincludedir="${prefix}/include/postgresql84/" \
+	--with-pgincludeserverdir="${prefix}/include/postgresql84/server/" \
+	--with-pglibdir="${prefix}/lib/postgresql84/" \
+	--with-pgpkglibdir="${prefix}/lib/postgresql84/"
+}
+
 #post-destroot {
 #    foreach bin { slon slonik } {
 #	system "cd ${destroot}${prefix}/bin && ln -s ../lib/postgresql82/bin/${bin}"
