fix a typo in variant conflict, thanks lint
git-svn-id: https://svn.macports.org/repository/macports/trunk@72479 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/slony1/Portfile
+++ b/dports/databases/slony1/Portfile
@@ -72,7 +72,7 @@ variant postgresql83 conflicts postgresql82 postgresql84 \
 	--with-pgpkglibdir="${prefix}/lib/postgresql83/"
 }
 
-variant postgresql84 conflicts postgresql82 postresql83 \
+variant postgresql84 conflicts postgresql82 postgresql83 \
     description {support for PostgreSQL 8.4 instead of 9.0} {
     depends_lib-delete	port:postgresql90
     depends_lib-append	port:postgresql84
