grantlee: update to 0.1.6; see #26847
git-svn-id: https://svn.macports.org/repository/macports/trunk@72480 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/grantlee/Portfile
+++ b/dports/devel/grantlee/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                grantlee
-version             0.1.2
+version             0.1.6
 categories          devel kde kde4
 maintainers         nomaintainer
 description         string template engine based on the Django template system
@@ -15,10 +15,9 @@ platforms           darwin
 homepage            http://www.grantlee.org/
 master_sites        http://downloads.grantlee.org/
 
-checksums           md5     5be2280113230152625dd95aff54b8e8 \
-                    sha1    1ccba71431c6318e27d97858d9b3a446992b4027 \
-                    rmd160  41f1d4780b132fee9f3dbe2f1cf0a4f90004584b
-
+checksums           sha1    a3df9267b3bf55d98e19e30279e751084dc4bbcd \
+                    rmd160  47d486efaf73910c83718d5c2d70daa3b35ecc75
+ 
 depends_lib-append  port:qt4-mac
 
 configure.args-append   ../${distname}
