updating pg2xbase in order to work with recent xbase upgrade in r72088, taking advantage of maintainer timeout cf. #26705
git-svn-id: https://svn.macports.org/repository/macports/trunk@72484 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/pg2xbase/Portfile
+++ b/dports/databases/pg2xbase/Portfile
@@ -8,19 +8,33 @@ categories		databases
 platforms		darwin
 maintainers		gmail.com:seanasy
 description		Convert data between PostgreSQL and DBF files
-long_description	pg2xbase provides utilities for converting between PostgreSQL databases and DBF files.
-
-homepage		http://www.klaban.torun.pl/prog/pg2xbase/
-master_sites		${homepage}
-
-extract.suffix		.tgz
-checksums		sha1 695625b19bea40748916c9e4c4185e82bdb808cc
-
+long_description	pg2xbase provides utilities for converting between \
+    PostgreSQL databases and DBF files.
+    
+homepage        
 depends_lib		port:postgresql81 port:xbase
 
-use_configure 		no
+master_sites		${homepage}
 
-build.args		INCLUDES="-I${prefix}/include -I${prefix}/include/postgresql81  -I${prefix}/include/postgresql81/internal  -I${prefix}/include/xbase" \
-			LIBS="-L${prefix}/lib -L${prefix}/lib/postgresql81 -lpq -lxbase"
+checksums		sha1 695625b19bea40748916c9e4c4185e82bdb808cc
+
+extract.suffix  .tgz
+post-extract {
+    #get rid of ELF binaries(!) extracted from tarball
+    system "cd ${worksrcpath} && make clean"
+}
+
+patchfiles      patch-pg2xbase-cpp.diff \
+                patch-xbase2pg-cpp.diff \
+                patch-xbaseconv-cpp.diff \
+                patch-xbasenew-cpp.diff \
+                patch-Makefile.diff
+
+post-patch {
+    reinplace "s|@@PREFIX@@|${prefix}|g"   ${worksrcpath}/Makefile
+}
+
+use_configure 		no
+use_parallel_build  no
 
 destroot.destdir 	prefix=${destroot}${prefix}
