--- a/dports/x11/xorg-libice/Portfile
+++ b/dports/x11/xorg-libice/Portfile
@@ -26,6 +26,8 @@ depends_build     port:pkgconfig \
 
 depends_lib       port:xorg-xproto
 
+build.args V=1
+
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
 livecheck.regex libICE-(\\d+(?:\\.\\d+)*)
