--- a/dports/x11/xorg-libice/Portfile
+++ b/dports/x11/xorg-libice/Portfile
@@ -22,11 +22,18 @@ checksums           md5     2d39bc924af24325dae589e9a849180c \
                     rmd160  6b9e6e649ac227210f3e3afdfa8376d659750321
 
 depends_build     port:pkgconfig \
+                  port:xorg-util-macros \
                   port:xorg-xtrans
 
 depends_lib       port:xorg-xproto
 
 build.args V=1
+
+patchfiles correct_includes.patch
+patch.pre_args -p1
+
+use_autoreconf yes
+autoreconf.args -fvi
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
