update swig bindings to 2.0.1, and add a note to the swig portfile to remember this in future
git-svn-id: https://svn.macports.org/repository/macports/trunk@72490 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/swig/Portfile
+++ b/dports/devel/swig/Portfile
@@ -5,6 +5,8 @@ PortSystem 1.0
 name		swig
 version		2.0.1
 
+# remember to update the binding ports at the same time as swig
+
 categories	devel
 maintainers	kevin jwa
 
