--- a/dports/aqua/Freecell/Portfile
+++ b/dports/aqua/Freecell/Portfile
@@ -13,13 +13,19 @@ description             classic solitaire game
 long_description        The imaginatively-titled “Freecell” is a Mac OS X \
                         version of the classic solitaire game.
 
-homepage                http://randomoracle.com/freecell/
+homepage                http://web.archive.org/web/20080622113332/http://randomoracle.com/freecell/
 master_sites            macports
 use_bzip2               yes
 
 checksums               md5 05c41aa87c3a6c390f83c12db7c4ff3d \
                         sha1 2e609fe0548f44a316f77f15db39581aad7a587f \
                         rmd160 0dbb3cbb23730654244091f4683c51a590a373ab
+
+post-patch {
+    copy ${filespath}/Info-Freecell.plist ${worksrcpath}
+    move ${worksrcpath}/Freecell.pbproj ${worksrcpath}/Freecell.xcodeproj
+    copy -force ${filespath}/project.pbxproj ${worksrcpath}/Freecell.xcodeproj/project.pbxproj
+}
 
 variant universal {
     post-patch {
