math/petsc: enable shared library
git-svn-id: https://svn.macports.org/repository/macports/trunk@72497 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/petsc/Portfile
+++ b/dports/math/petsc/Portfile
@@ -27,6 +27,7 @@ configure.env-append	PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
 configure.cmd   ${worksrcpath}/config/configure.py
 configure.args  --with-python --with-debugging=0 \
  		--with-c-support=1 --with-c++-support=1 --with-pic=fPIC \
+ 		--with-shared=1 \
 		--prefix=${destroot}${prefix}/lib/petsc \
 		--with-cc=${prefix}/bin/openmpicc \
 		--with-cxx=${prefix}/bin/openmpicxx \
