math/slepc: install in corresponding PETSc directory
git-svn-id: https://svn.macports.org/repository/macports/trunk@72498 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/slepc/Portfile
+++ b/dports/math/slepc/Portfile
@@ -30,7 +30,7 @@ configure.cmd         ${worksrcpath}/config/configure.py
 configure.args        --prefix=${prefix}/lib/petsc
 build.env-append      PETSC_DIR=${prefix}/lib/petsc PETSC_ARCH=installed-petsc SLEPC_DIR=${worksrcpath}
 destroot.env-append   PETSC_DIR=${prefix}/lib/petsc PETSC_ARCH=installed-petsc SLEPC_DIR=${worksrcpath}
-destroot.cmd-append   SLEPC_INSTALL_DIR=${destroot}${prefix}
+destroot.cmd-append   SLEPC_INSTALL_DIR=${destroot}${prefix}/lib/petsc
 
 variant arpack description {compile with ARPACK support} {
     pre-fetch {
