tokyocabinet: add missing bzip2 dependency (#26879)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72501 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/tokyocabinet/Portfile
+++ b/dports/databases/tokyocabinet/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                tokyocabinet
 version             1.4.46
+revision            1
 categories          databases
 maintainers         stromnov openmaintainer
 platforms           darwin
@@ -27,7 +28,8 @@ checksums           md5     341dadd1f3d68760e350f7e731111786 \
                     sha1    031569d1eb181584ce4a96c4951341e6b29be8c8 \
                     rmd160  8e7451bcec30e1a432f6d9fea70c2e39027781f8
 
-depends_lib         port:zlib
+depends_lib         port:zlib \
+                    port:bzip2
 
 # To avoid linking against a previously installed version, remove the default
 # CPPFLAGS and LDFLAGS. The build scripts already add the
