Fix portfile to actually find db47 headers/library (fixes #26103), port was broken, ticket open for 2 months
git-svn-id: https://svn.macports.org/repository/macports/trunk@72503 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/webalizer/Portfile
+++ b/dports/www/webalizer/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name                   webalizer
 version                2.21-02
+revision               1
 categories             www
 maintainers            pobox.com:mike.mclean
 description            The Webalizer is a fast, free web server log file \
@@ -40,7 +41,9 @@ configure.args          --mandir=${prefix}/share/man \
                         --with-z-inc=${prefix}/include \
                         --with-zlib=${prefix}/lib \
                         --with-png-inc=${prefix}/include \
-                        --with-png=${prefix}/lib
+                        --with-png=${prefix}/lib \
+                        --with-db=${prefix}/include/db47 \
+                        --with-dblib=${prefix}/lib/db47 
             
 destroot.destdir        prefix=${destroot}${prefix} \
                         ETCDIR=${destroot}${prefix}/etc \
@@ -68,6 +71,8 @@ variant no_largefile description {omit support for large files      [default=no]
 
 variant no_dns description {Disable DNS/GeoDB lookup code           [default=no => DNS/GeoDB enabled, bdb libs required]} {
     configure.args-append --disable-dns
+    configure.args-delete --with-db=${prefix}/include/db47 \
+                          --with-dblib=${prefix}/lib/db47  
     depends_lib-delete port:db47
 }
 
