imake: 1.0.3 is not on sourceforge
git-svn-id: https://svn.macports.org/repository/macports/trunk@72504 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/imake/Portfile
+++ b/dports/x11/imake/Portfile
@@ -13,9 +13,7 @@ description       Discontinued imake build system.
 long_description  ${description}
 
 homepage http://xorg.freedesktop.org/
-master_sites \
-    http://xorg.freedesktop.org/releases/individual/util/ \
-    sourceforge:fink
+master_sites xorg:individual/util/
 
 use_bzip2 yes
 
