py25-sip: Set to no maintainer. (#26781)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72506 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-sip/Portfile
+++ b/dports/python/py25-sip/Portfile
@@ -7,7 +7,7 @@ name            py25-sip
 version         4.11.1
 revision        1
 categories      python devel
-maintainers     saispo openmaintainer
+maintainers     nomaintainer
 platforms       macosx
 
 description     create Python bindings for C and C++ libraries
