py26-pyqt4: Set to no maintainer. (#26779)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72508 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pyqt4/Portfile
+++ b/dports/python/py26-pyqt4/Portfile
@@ -7,7 +7,7 @@ name		py26-pyqt4
 version		4.7.7
 categories	python devel
 platforms	macosx
-maintainers     saispo openmaintainer
+maintainers     nomaintainer
 description	PyQt4 is a set of Python bindings for the Qt4 toolkit
 long_description \
 		PyQt4 is a set of Python bindings for the Qt4 toolkit. The \
