postgresql83: note that the perl variant requires perl to be installed with +shared (#18053)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72510 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/postgresql83/Portfile
+++ b/dports/databases/postgresql83/Portfile
@@ -91,7 +91,7 @@ variant krb5 description {add support for Kerberos 5 authentication} {
 	configure.args-append	--with-krb5
 }
 
-variant perl description {add Perl support} {
+variant perl description {add Perl support (requires perl with +shared)} {
 	depends_lib-append			bin:perl:perl5
 	configure.args-append		--with-perl
 }
