--- a/dports/aqua/Platypus/Portfile
+++ b/dports/aqua/Platypus/Portfile
@@ -48,7 +48,12 @@ destroot.target Platypus
 
 post-destroot {
 	reinplace "s|/usr/local|${destroot}${prefix}|g" ${worksrcpath}/Scripts/InstallCommandLineTool.sh
-	reinplace "s|English.lproj/||g" ${worksrcpath}/Scripts/InstallCommandLineTool.sh
+
+	# there is no English.lproj when building on Tiger but there is one on SL
+	if {"darwin" == ${os.platform} && 8 == ${os.major}} {
+		reinplace "s|English.lproj/||g" ${worksrcpath}/Scripts/InstallCommandLineTool.sh
+	}
+
 	exec /bin/bash ${worksrcpath}/Scripts/InstallCommandLineTool.sh ${destroot}/${applications_dir}/Platypus.app/Contents/Resources
 }
 
