--- a/dports/gnome/gnome-python26-extras/Portfile
+++ b/dports/gnome/gnome-python26-extras/Portfile
@@ -34,7 +34,8 @@ depends_lib         port:py26-gnome \
                     port:gtkspell2
 
 patchfiles          patch-pygobject \
-                    patch-configure.diff
+                    patch-configure.diff\
+                    patch-gdl-gdl-defs.diff
 
 set python.branch   2.6
 set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
@@ -44,7 +45,7 @@ configure.args-append       --prefix=${python.prefix}
 configure.pkg_config_path   ${python.prefix}/lib/pkgconfig
 
 configure.python        ${python.bin}
-configure.env-append    PYGTK_CODEGEN=${frameworks_dir}/Python.framework/Versions/2.6/bin/pygtk-codegen-2.0
+configure.env-append    PYGTK_CODEGEN=${frameworks_dir}/Python.framework/Versions/2.6/bin/pygobject-codegen-2.0
 
 platform darwin 9 {
     post-patch {
