gst-plugins-base: disable GObject introspection for now to prevent build failure when gobject-introspection is installed. See http://lists.macosforge.org/pipermail/macports-users/2010-October/022349.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@72514 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -34,7 +34,8 @@ configure.args \
     --disable-gst_v4l \
     --disable-alsa \
     --disable-cdparanoia \
-    --disable-ivorbis
+    --disable-ivorbis \
+    --enable-introspection=no
 
 variant no_x11 {
     configure.args-append --without-x --disable-x --disable-xvideo --disable-xshm
