--- a/dports/multimedia/schroedinger/Portfile
+++ b/dports/multimedia/schroedinger/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            schroedinger
-version         1.0.9
+version         1.0.10
 categories      multimedia
 maintainers     devans
 platforms       darwin
@@ -21,13 +21,17 @@ long_description \
 
 universal_variant  no
 
-checksums           md5     d67ec48b7c506db8c8b49156bf409e60 \
-                    sha1    b4121e10cc474c97676e03ae49c5a91c11956ba0 \
-                    rmd160  bf3abf83909a6d9f074c00a45ca65fcd124c07c8
+checksums       md5     9de088ccc314bb9e766cb3aa6510a0ef \
+                sha1    c8af4cb2bc54b7783ac20d7f4a39db4e31c1cac0 \
+                rmd160  07373e40e62067fd2a38a41c55ef6cdce40c75fb
 
 depends_build   port:pkgconfig
 
 depends_lib     port:orc
+
+patchfiles      patch-orc-symbols.diff
+
+use_autoreconf  yes
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
