xpdf: to ensure that xpdf and poppler can co-exist, make the functionality in the +with_poppler variant the default behavior and remove the variant.  Remove conflicts poppler.  See #17540, #26852, http://lists.macosforge.org/pipermail/macports-users/2010-October/022356.html.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72519 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/xpdf/Portfile
+++ b/dports/graphics/xpdf/Portfile
@@ -3,9 +3,8 @@
 PortSystem 1.0
 
 name         xpdf
-conflicts    poppler
 version      3.02
-revision     6
+revision     7
 description  Xpdf is a viewer for PDF files.
 long_description \
     Xpdf is a viewer for Portable Document Format \
@@ -61,7 +60,7 @@ extract.only ${xpdfmain}
 
 depends_lib \
 	port:xorg-libXp port:xpm port:xorg-libXt port:freetype \
-	port:libpaper lib:libXm:openmotif port:t1lib
+	port:poppler port:libpaper lib:libXm:openmotif port:t1lib
 
 depends_run  path:share/ghostscript/fonts:ghostscript
 
@@ -106,16 +105,6 @@ variant a4 description {Use A4 as the default paper size instead of Letter} {
     configure.args-append --enable-a4-paper
 }
 
-variant with_poppler description {Add Poppler support} {
-	depends_run-append port:poppler
-	post-destroot {
-		foreach i { pdffonts pdfimages pdfinfo pdftoppm pdftops pdftotext } {
-			delete ${destroot}${prefix}/bin/${i}
-			delete ${destroot}${prefix}/share/man/man1/${i}.1
-		}
-	}
-}
-
 platform puredarwin {
     depends_lib-delete lib:libXm:openmotif
     depends_lib-append port:lesstif
@@ -130,6 +119,13 @@ platform puredarwin {
 
 variant drm description {Obey access restrictions in PDF files} {
     patchfiles-delete xpdf-${version}-salvage-your-eye.patch
+}
+
+post-destroot {
+    foreach i { pdffonts pdfimages pdfinfo pdftoppm pdftops pdftotext } {
+        delete ${destroot}${prefix}/bin/${i}
+        delete ${destroot}${prefix}/share/man/man1/${i}.1
+    }
 }
 
 post-install {
