port upgrade from 6.2.0 (2007) to 7.3.0 (2010)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72523 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/fetch/Portfile
+++ b/dports/net/fetch/Portfile
@@ -3,9 +3,9 @@
 PortSystem 1.0
 
 name		fetch
-version		6.2.0-RELEASE
+version		7.3.0-RELEASE
 categories	net
-maintainers	nomaintainer
+maintainers	afb
 description	FreeBSD file fetching utility
 long_description	Fetch provides a command-line interface to the fetch(3) library. \
 	Its purpose is to retrieve the file(s) pointed to by the URL(s) on the command line.
@@ -13,12 +13,12 @@ platforms	darwin freebsd
 use_bzip2	yes
 homepage	http://www.freebsd.org/
 master_sites	macports
-checksums	md5 41f930ab95e10e6d204bf8ac380db7bd
+checksums	md5 adfd092d7cd45c9797105e433662591f
 worksrcdir	${name}
 use_configure	no
-depends_lib	lib:libfetch.4:libfetch
+depends_lib	lib:libfetch.5:libfetch lib:ssl:openssl
 build.type	bsd
-build.args	CFLAGS+=-I${prefix}/include LDFLAGS+=-L${prefix}/lib
+build.args	CFLAGS+=-I${prefix}/include LDFLAGS+=-L${prefix}/lib -DMK_OPENSSL
 
 destroot	{
 		xinstall -m 755 ${workpath}/${worksrcdir}/fetch ${destroot}${prefix}/bin
