--- a/dports/net/libfetch/Portfile
+++ b/dports/net/libfetch/Portfile
@@ -3,10 +3,9 @@
 PortSystem 1.0
 
 name		libfetch
-version		6.2.0-RELEASE
-revision	1
+version		7.3.0-RELEASE
 categories	net
-maintainers	nomaintainer
+maintainers	afb
 description	FreeBSD file fetching library
 long_description	These functions implement a high-level library for retrieving and \
 			uploading files using Uniform Resource Locators (URLs).
@@ -14,18 +13,26 @@ platforms	darwin freebsd
 use_bzip2	yes
 homepage	http://www.freebsd.org/
 master_sites	macports
-checksums	md5 0d0b59e7c13b7bce67bcdd13e1fde7d5
+checksums	md5 34431a8480734c42a822701c36772b97
 build.type	bsd
+build.args	-DMK_INET6_SUPPORT -DMK_OPENSSL
 worksrcdir	${name}
 use_configure	no
-set libver	4
+set libver	5
 destroot	{
 		xinstall -m 644 -c ${worksrcpath}/fetch.h ${destroot}${prefix}/include
 		xinstall -m 644 -c ${worksrcpath}/fetch.3 ${destroot}${prefix}/share/man/man3 }
 
+depends_lib	lib:ssl:openssl
+patchfiles	patch-common.c patch-http.c
+
 platform darwin {
-	patchfiles	patch-Makefile patch-common.h patch-common.c
-	build.env	LDADD="-Wl,-install_name,${prefix}/lib/libfetch.${libver}.dylib"
+	patchfiles-append	patch-Makefile patch-common.h
+	post-build {
+		# need to add libdir, do it afterwards instead of messing with make
+		system "install_name_tool -id ${prefix}/lib/libfetch.${libver}.dylib \
+			${worksrcpath}/libfetch.${libver}.dylib"
+	}
 	pre-destroot {
 		xinstall -m 644 -c ${worksrcpath}/libfetch.${libver}.dylib \
 			${destroot}${prefix}/lib
