kcd: autoconf to fix a misbehaving conftest
git-svn-id: https://svn.macports.org/repository/macports/trunk@72528 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/kcd/Portfile
+++ b/dports/sysutils/kcd/Portfile
@@ -24,6 +24,9 @@ depends_lib     port:gettext \
                 port:ncurses \
                 port:zlib
 
+# fix conftest consuming all available memory
+use_autoconf    yes
+
 destroot.destdir    prefix=${destroot}${prefix} \
                     mandir=${destroot}${prefix}/share/man \
                     etcdir2=${destroot}${prefix}/etc
