--- a/dports/lang/tuareg-mode.el/Portfile
+++ b/dports/lang/tuareg-mode.el/Portfile
@@ -1,34 +1,36 @@
 # $Id$
 
-PortSystem			1.0
-name				tuareg-mode.el
+PortSystem 1.0
+name		tuareg-mode.el
 # reverting to version 1.45 because 1.46 was removed from official download website
-epoch				1
-version				1.45.6
-categories			lang editors
-maintainers			nomaintainer
-description			A GNU Emacs/XEmacs major mode for editing Caml and OCaml programs.
-long_description	Tuareg is a Caml mode for GNU Emacs  and XEmacs. It handles \
-					automatic indentation of Objective Caml and Camllight codes. \
-					Key parts of the code are hilighted using Font-Lock. Support \
-					to run an interactive Caml toplevel and debbuger is provided.
-homepage			http://www-rocq.inria.fr/~acohen/tuareg/
-platforms			darwin
-distname			tuareg-mode-${version}
-use_bzip2			yes
-master_sites		http://www-rocq.inria.fr/~acohen/tuareg/mode/
-checksums           md5     75df362cba2d32e9828eebe80716009f \
-                    sha1    ee557fc003537a2eed8c351fcb50cf52e8926c48 \
-                    rmd160  cd99520a8b6940198b2db9a2cb9abeee309f8514
+epoch		1
+version		2.0.2
+categories	lang editors
+maintainers	nomaintainer
+description	A GNU Emacs/XEmacs major mode for editing Caml and OCaml programs.
+long_description\
+	Tuareg is a Caml mode for GNU Emacs  and XEmacs. It handles \
+	automatic indentation of Objective Caml and Camllight codes. \
+	Key parts of the code are highlighted using Font-Lock. Support \
+	to run an interactive Caml toplevel and debugger is provided.
 
-# We want emacs from MacPorts since this will install stuff in emacs' site-lisp and we want
-# it to go into ${prefix}'s site-lisp.
-depends_lib			path:${prefix}/bin/emacs:emacs
-depends_run			bin:ocaml:ocaml
+homepage	http://tuareg.forge.ocamlcore.org/
+platforms	darwin
+distname	tuareg-${version}
+master_sites	http://forge.ocamlcore.org/frs/download.php/468/
 
-use_configure		no
+checksums	md5     71f54eb051d9e4ad84e1250c7e5b9534 \
+		sha1    0361f39c35d759cee66c549f3400390e9019c431 \
+		rmd160  153a0958bed6e6517db1a30bdd23980f7add37f9
 
-build				{
+# We want emacs from MacPorts since this will install stuff in emacs'
+# site-lisp and we want it to go into ${prefix}'s site-lisp.
+depends_lib	port:emacs
+depends_run	port:ocaml
+
+use_configure	no
+
+build		{
 	system "cd ${worksrcpath} && \
 		emacs --batch --eval \
 			'(progn (setq load-path (cons \".\" load-path)) \
