add checksums, fix ssl dependency style
git-svn-id: https://svn.macports.org/repository/macports/trunk@72530 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/fetch/Portfile
+++ b/dports/net/fetch/Portfile
@@ -13,10 +13,12 @@ platforms	darwin freebsd
 use_bzip2	yes
 homepage	http://www.freebsd.org/
 master_sites	macports
-checksums	md5 adfd092d7cd45c9797105e433662591f
+checksums	md5 adfd092d7cd45c9797105e433662591f \
+		sha1 a5fcee23a373993c8595939fba1651578cc9d62e \
+		rmd160 d538646f3bc58cf7e6b9fea9c3fd3806a0d3317d
 worksrcdir	${name}
 use_configure	no
-depends_lib	lib:libfetch.5:libfetch lib:ssl:openssl
+depends_lib	lib:libfetch.5:libfetch port:openssl
 build.type	bsd
 build.args	CFLAGS+=-I${prefix}/include LDFLAGS+=-L${prefix}/lib -DMK_OPENSSL
 
