--- a/dports/net/libfetch/Portfile
+++ b/dports/net/libfetch/Portfile
@@ -13,7 +13,9 @@ platforms	darwin freebsd
 use_bzip2	yes
 homepage	http://www.freebsd.org/
 master_sites	macports
-checksums	md5 34431a8480734c42a822701c36772b97
+checksums	md5 34431a8480734c42a822701c36772b97 \
+		sha1 52f4a15258c3c937136837be4b88af014d39a7cb \
+		rmd160 20844a4d3456efcbe32acbb2e09322023a315303
 build.type	bsd
 build.args	-DMK_INET6_SUPPORT -DMK_OPENSSL
 worksrcdir	${name}
@@ -23,7 +25,7 @@ destroot	{
 		xinstall -m 644 -c ${worksrcpath}/fetch.h ${destroot}${prefix}/include
 		xinstall -m 644 -c ${worksrcpath}/fetch.3 ${destroot}${prefix}/share/man/man3 }
 
-depends_lib	lib:ssl:openssl
+depends_lib	port:openssl
 patchfiles	patch-common.c patch-http.c
 
 platform darwin {
