gtk2: update to version 2.22.0, add new dependency on gdk-pixbuf2, now split out from gtk2 again.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72532 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gtk2/Portfile
+++ b/dports/x11/gtk2/Portfile
@@ -7,7 +7,7 @@ PortGroup       muniversal 1.0
 PortGroup       xcodeversion 1.0
 
 name            gtk2
-version         2.20.1
+version         2.22.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      x11
 maintainers     nox openmaintainer
@@ -28,21 +28,17 @@ master_sites    gnome:sources/gtk+/${branch}/ \
 
 minimum_xcodeversions {9 3.1}
 
-checksums       md5     53e6f3a93bd22934878fc4a4a34c68aa \
-                sha1    a80953b4e81c6a5bc2a986852f7fe60c8704cc02 \
-                rmd160  bcd5f20f9e3f8d4e6f9bd91388de2fe9851ef361
+checksums       md5     abdb282a0ee55384babae7e82f5e7296 \
+                sha1    3af12d8eb3520516b25fa82873f87473dfb42cc0 \
+                rmd160  50da72c8f1f7416e79ffbd458252e65fe7ba96af
 
-patchfiles      patch-gtk-builder-convert.diff \
-                patch-modules-gail.diff \
-                patch-modules-printbackends.diff
+patchfiles      patch-gtk-builder-convert.diff
 
 depends_build   port:pkgconfig
 
-depends_lib     port:tiff \
-                port:jasper \
-                port:atk \
+depends_lib     port:atk \
                 path:lib/pkgconfig/pango.pc:pango \
-                port:gettext
+                port:gdk-pixbuf2
 
 depends_run     port:shared-mime-info
 
