print/pdflib: Fix a libtool issue with +universal, closes #22737
git-svn-id: https://svn.macports.org/repository/macports/trunk@72535 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/pdflib/Portfile
+++ b/dports/print/pdflib/Portfile
@@ -23,7 +23,8 @@ checksums           md5     34a1cc89e2cfdc1e43ba57019e442a90 \
                     rmd160  7f3862e70e2f74cf3143ea61e051c30e518ab2eb
 
 patchfiles		\
-    patch-perl_Makefile.diff
+    patch-perl_Makefile.diff \
+    patch-libtool.diff
 
 test.run        yes
 
