graphics/gdk-pixbuf2: Use upgrade instead of install as that would change the requested state of the gtk2 port when using portdbformat sqlite.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72536 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gdk-pixbuf2/Portfile
+++ b/dports/graphics/gdk-pixbuf2/Portfile
@@ -47,7 +47,7 @@ pre-configure {
       please execute these commands:
 
           sudo port -f deactivate gtk2
-          sudo port install gtk2
+          sudo port upgrade gtk2
 "
             return -code error "deactivate outdated gtk2 port."
         }
